sc/source/filter/xml/xmltransformationi.hxx
@@ -72,16 +72,17 @@ public:
 
 class ScXMLColumnSortContext : public ScXMLImportContext
 {
+    ScSortParam maSortParam;
+
 public:
     ScXMLColumnSortContext(ScXMLImport& rImport,
                            const rtl::Reference<sax_fastparser::FastAttributeList>& rAttrList);
 
     virtual ~ScXMLColumnSortContext() override;
-    /*
+
     virtual css::uno::Reference<css::xml::sax::XFastContextHandler> SAL_CALL createFastChildContext(
         sal_Int32 nElement,
         const css::uno::Reference<css::xml::sax::XFastAttributeList>& xAttrList) override;
-    */
 };
 
 class ScXMLColumnTextContext : public ScXMLImportContext
