sc/qa/unit/dataproviders_test.cxx
@@ -15,6 +15,8 @@
 #include <datamapper.hxx>
 #include <vcl/scheduler.hxx>
 #include <orcusxml.hxx>
+#include <sortparam.hxx>
+#include <datatransformation.hxx>
 
 #include <memory>
 
@@ -31,6 +33,7 @@ public:
     void testXMLImport();
     void testBaseImport();
     void testTdf169541_TwoDataMapping();
+    void testTdf169610_SortTransform();
 
     CPPUNIT_TEST_SUITE(ScDataProvidersTest);
     CPPUNIT_TEST(testCSVImport);
@@ -39,6 +42,7 @@ public:
     CPPUNIT_TEST(testXMLImport);
     CPPUNIT_TEST(testBaseImport);
     CPPUNIT_TEST(testTdf169541_TwoDataMapping);
+    CPPUNIT_TEST(testTdf169610_SortTransform);
     CPPUNIT_TEST_SUITE_END();
 };
 
@@ -224,6 +228,81 @@ void ScDataProvidersTest::testTdf169541_TwoDataMapping()
     CPPUNIT_ASSERT(pDoc);
     // Because this test is only about the crash, the paths in the test document are
     // not adapted to the test environment and thus no further tests about the content here.
+}
+
+void ScDataProvidersTest::testTdf169610_SortTransform()
+{
+    //Create Document
+    createScDoc();
+
+    // Create database range. Size arbitrary, but larger as data, here range C4:K16.
+    // rName, nTab, nCol1, nRow1, nCol2, nRow2
+    ScDBData* pDBData = new ScDBData(u"testDB"_ustr, 0, 2, 3, 10, 15);
+    pDBData->SetHeader(true);
+    ScDocument* pDoc = getScDoc();
+    bool bInserted
+        = pDoc->GetDBCollection()->getNamedDBs().insert(std::unique_ptr<ScDBData>(pDBData));
+    CPPUNIT_ASSERT(bInserted);
+
+    // Create data mapping directly without dialog
+    OUString aFileURL = createFileURL(u"csv/tdf169610_SortTransform.csv");
+    sc::ExternalDataSource aDataSource(aFileURL, u"org.libreoffice.calc.csv"_ustr, pDoc);
+    aDataSource.setDBData(pDBData->GetName());
+
+    // range address is relative in SortTransform of Data Provider
+    ScSortParam aSortParam;
+    // ctor includes Clear(). That sets alreay 0 for nCol1, nRow1 and nSourceTab
+    aSortParam.nCol2 = 8;
+    aSortParam.nRow2 = 12;
+    aSortParam.bHasHeader = true;
+    aSortParam.maKeyState[0].bDoSort = true;
+    aSortParam.maKeyState[0].nField = 1;
+    aSortParam.maKeyState[0].bAscending = true;
+    aDataSource.AddDataTransformation(std::make_shared<sc::SortTransformation>(aSortParam));
+
+    pDoc->GetExternalDataMapper().insertDataSource(aDataSource);
+    auto& rDataSources = pDoc->GetExternalDataMapper().getDataSources();
+    CPPUNIT_ASSERT(!rDataSources.empty());
+
+    // actually import the data. The data will cover the range C4:F12.
+    rDataSources[0].refresh(pDoc, true);
+    Scheduler::ProcessEventsToIdle();
+
+    // Examine some data
+    // Header Row with ID, Name, Region, Sales
+    CPPUNIT_ASSERT_EQUAL(u"ID"_ustr, pDoc->GetString(2, 3, 0)); // col, row, tab
+    CPPUNIT_ASSERT_EQUAL(u"Sales"_ustr, pDoc->GetString(5, 3, 0));
+    // First data row
+    CPPUNIT_ASSERT_EQUAL(u"Ali"_ustr, pDoc->GetString(3, 4, 0));
+    CPPUNIT_ASSERT_EQUAL(9.0, pDoc->GetValue(5, 4, 0));
+    // Last data row
+    CPPUNIT_ASSERT_EQUAL(u"Tom"_ustr, pDoc->GetString(3, 11, 0));
+    CPPUNIT_ASSERT_EQUAL(14.0, pDoc->GetValue(5, 11, 0));
+
+    // Save document and examine markup. Without fix the sort transformation
+    // was not written to file
+    skipValidation(); // ToDo: tdf#169669 no schema yet for calcext:data-mappings
+    saveAndReload(TestFilter::ODS);
+    pDoc = getScDoc();
+
+    xmlDocUniquePtr pXmlDoc = parseExport(u"content.xml"_ustr);
+    static constexpr OString sDataMappingPath = "//calcext:data-mapping"_ostr;
+    assertXPath(pXmlDoc, sDataMappingPath, 1);
+    const OString sTransformationPath = sDataMappingPath
+                                        + "/calcext:data-transformations"
+                                          "/calcext:column-sort-transformation";
+    assertXPath(pXmlDoc, sTransformationPath, 1);
+    assertXPath(pXmlDoc, sTransformationPath + "/table:sort", 1);
+    const OString sSortByPath = sTransformationPath + "/table:sort/table:sort-by";
+    assertXPath(pXmlDoc, sSortByPath, 1);
+    assertXPath(pXmlDoc, sSortByPath + "[@table:field-number='1']");
+
+    // Examine data again in reloaded document.
+    // Without fix the data were unsorted after reload.
+    CPPUNIT_ASSERT_EQUAL(u"Ali"_ustr, pDoc->GetString(3, 4, 0));
+    CPPUNIT_ASSERT_EQUAL(9.0, pDoc->GetValue(5, 4, 0));
+    CPPUNIT_ASSERT_EQUAL(u"Tom"_ustr, pDoc->GetString(3, 11, 0));
+    CPPUNIT_ASSERT_EQUAL(14.0, pDoc->GetValue(5, 11, 0));
 }
 
 ScDataProvidersTest::ScDataProvidersTest()
